nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tl
  template:
    metadata:
      labels:
        app: nginx-tl
    spec:
      containers:
        - name: nginx-tl
          image: thijslintermans/nginx-tl-milestone2:1.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
