nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-tl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-tl
  template:
    metadata:
      labels:
        app: nodejs-tl
    spec:
      containers:
        - name: nodejs-tl
          image: thijslintermans/nodejs-tl-milestone2:1.0
          ports:
            - containerPort: 3000
