nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-tl
spec:
  selector:
    app: nodejs-tl
  ports:
    - protocol: TCP
      port: 3000
