postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-tl
spec:
  selector:
    app: postgres-tl
  ports:
    - protocol: TCP
      port: 5432
